# blog_with_messages

./: .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.yml  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 1c8a6d972719_likes_table.py  57a0e4ba1a21_post_table_new_column.py  642a3a76dbef_first_migration.py  6af4b6ca1264_comment_table.py  87cd68658118_comment_table3.py
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: image.py  login.py  post.py  search.py  user.py
app/core/: celery_app.py  config.py  security.py
app/crud/: base.py  crud_comment.py  crud_like.py  crud_post.py  crud_user.py
app/db/: base.py  init_db.py  session.py
app/elastic/: documents.py  elastic_service.py
app/email_templates/: password_recovery.html  test.html
app/models/: comment.py  image.py  likes.py  post.py  users.py
app/schemas/: comment.py  exceptions.py  image.py  like.py  message.py  page.py  post.py  responses.py  token.py  users.py
app/utils/: db_checking.py  elastic.py  image_processing.py  initial_data.py  page.py  sendmail.py
tests/: conftest.py  other_tools.py
tests/api/api_v1/: test_users.py
tests/core/: test_security.py
tests/crud/: conftest.py  test_post.py  test_user.py
tests/utils/: test_sendmail.py
