[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Ivylou <princequincyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.18"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
uvicorn = "^0.22.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.2.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^2.4.2"}
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
httpx = "^0.24.1"
pytest = "^7.4.0"
emails = "^0.6"
jinja2 = "^3.1.2"
pytest-mock = "^3.11.1"
elasticsearch = "^8.9.0"
elasticsearch-dsl = "^8.9.0"
pydantic-settings = "^2.0.3"
fastapi-pagination = "^0.12.12"
sqlalchemy-utils = "^0.41.1"
celery = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
